tests/test_assets/semantic/invalid/enums/integer_initializer.cog
Color :: enum(u16) {
    Red,
    Green,
    Blue,
}

value: Color = 1;